--- a/Registro.css
+++ b/Registro.css
@@ -1,83 +1,70 @@
-body, html {
+/* Estilos generales */
+body {
+    font-family: Helvetica, Arial, sans-serif; 
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: "Helvetica", sans-serif; /* Tipo de letra */
-}
-
-.background-image {
-    background-image: url('/Imagenes/Registro_BG.jpg'); /* Cambia 'background-image.jpg' por la URL de tu imagen de fondo */
+    background-image: url('Imagenes/Registro_BG.jpg'); 
     background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    background-position: center; 
+    background-repeat: no-repeat; 
 }
 
-/* Estilos comunes para login-box y register-box */
-.login-box, .register-box {
-    width: 300px;
+
+.register-box {
+    width: 300%;
+    max-width: 400px;
+    margin: 100px auto;
     padding: 40px;
     background: rgb(90, 173, 212);
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
     border-radius: 40px; 
     border: 6px solid rgb(254, 5, 124); 
     text-align: center;
-    display: flex; /* Añadir display flex */
-    flex-direction: column; /* Alinear elementos en una columna */
-    justify-content: center; /* Centrar verticalmente los elementos */
-    align-items: center;
 }
-
-/* Estilos específicos para register-box */
-.register-box {
-    margin: auto;
-    margin-top: 50px; /* Ajusta la distancia desde la parte superior */
+h2 {
+    text-align: center;
 }
-
-.register-box h2 {
-    color: #000000;
-    margin-bottom: 30px;
-}
-
 .textbox {
-    width: 100%;
-    margin-bottom: 20px; /* Espaciado entre los textbox */
+    position: relative;
+    margin-bottom: 30px;
 }
 
 .textbox input {
     width: 100%;
     padding: 10px;
-    background: rgba(255, 255, 255, 0.2);
-    border: 2px solid #00FFFF; /* Borde azul neón */
+    background: rgb(255, 255, 255);
+    border: 2px solid #00FFFF; 
     outline: none;
-    color: #fff;
+    color: #000000;
     font-size: 18px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5); /* Sombra en el borde */
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5); 
 }
 
+
+
 .btn {
-    width: 100%;
-    background: #009688;
-    border: 2px solid #003366; /* Borde azul oscuro */
+    background: #ffffff;
+    border: 4px solid rgb(23, 36, 78); 
     padding: 10px;
     cursor: pointer;
     font-size: 18px;
-    color: #fff;
-    border-radius: 20px; /* Botón redondeado */
-    outline: none; /* Quita el contorno al hacer clic */
+    color: #000000;
+    border-radius: 20px; 
+    outline: none; 
+    width: auto; 
 }
 
 .btn:hover {
-    background: #008577;
+    background: rgb(0, 106, 133);
 }
 
-.extras {
-    margin-top: 20px;
-    color: #ff69b4; /* Color rosa */
+.extras p {
+    font-size: 20px; 
+    color: rgb(254, 5, 124); 
+    margin: 10px 0; 
 }
+
 
 .extras a {
     color: inherit;
@@ -88,10 +75,11 @@ body, html {
     text-decoration: underline;
 }
 
+
 .logo {
     position: absolute;
-    top: 130px; 
-    left: 740px; 
+    top: -40px; 
+    left: -40px; 
     width: 100px; 
     height: 100px; 
     border-radius: 50%; 
@@ -102,8 +90,8 @@ body, html {
 
 .Avion {
     position: absolute;
-    top: 130px; 
-    right: 740px; 
+    top: -45px; 
+    right: -30px; 
     width: 100px; 
     height: 100px; 
     background-image: url('/Imagenes/Avion.png'); 
