--- a/Registro.css
+++ b/Registro.css
@@ -41,6 +41,17 @@ h2 {
     box-shadow: 0 0 10px rgba(0, 255, 255, 0.5); 
 }
 
+.textbox select {
+    width: 100%;
+    padding: 10px;
+    background: rgb(255, 255, 255);
+    border: 2px solid #00FFFF; 
+    outline: none;
+    color: #000000;
+    font-size: 18px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5); 
+}
 
 
 .btn {
@@ -78,8 +89,8 @@ h2 {
 
 .logo {
     position: absolute;
-    top: -40px; 
-    left: -40px; 
+    top: 75px; 
+    left: 670px; 
     width: 100px; 
     height: 100px; 
     border-radius: 50%; 
@@ -90,8 +101,8 @@ h2 {
 
 .Avion {
     position: absolute;
-    top: -45px; 
-    right: -30px; 
+    top: 75px; 
+    right: 670px; 
     width: 100px; 
     height: 100px; 
     background-image: url('/Imagenes/Avion.png'); 
