--- a/Home.css
+++ b/Home.css
@@ -100,18 +100,48 @@ header {
 
 
 .fila {
-    display: flex;
-    justify-content: center;
-  }
-  .columna {
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: #f2f2f2;
-    border: 1px solid #ddd;
-    text-align: center; 
-  }
-  
+  display: flex;
+  justify-content: center;
+}
+.columna {
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  text-align: center; 
+}
  
+.recuadro-1 {
+  background-color: rgb(255, 255, 255); 
+  border-radius: 10px; 
+  padding: 15px;
+}
+
+.recuadro-2 {
+  display: inline-block;
+  background-color: rgb(214, 133, 172); 
+  border-radius: 10px; 
+  padding: 15px;
+  text-align: left;
+}
+
+.lista-paises {
+  list-style: none; 
+  padding: 0; 
+}
+
+.lista-paises li {
+  margin-bottom: 10px; /
+}
+
+.bandera-pequeña {
+  width: 60px; 
+  height: auto; 
+  vertical-align: middle;
+  margin-right: 30px; 
+}
+
+
   .izquierda, .derecha {
     flex: 1;
   }
