--- a/Node/react_project/src/Estilos/Navibar.css
+++ b/Node/react_project/src/Estilos/Navibar.css
@@ -40,6 +40,10 @@ body{
   text-align-last: end;
 }
 
+.Navbar_Buscador_Contenedor:hover{
+  background-color: rgb(227, 46, 118);
+}
+
 .Navbar-Buscador{
   width: 400px;
   border-radius: 25px 0 0 25px;
@@ -53,7 +57,7 @@ body{
 }
 
 .Navbar_Buscador_Contenedor button:hover{
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 11, 11, 0);
 }
 
 .Navbar_Buscador_Contenedor button:focus{
@@ -68,9 +72,17 @@ body{
   background-color: rgb(22, 55, 113);
   border-radius: 25px;
   color: white;
-  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin: 6px;
   width: fit-content;
   height: 50px;
   border: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 25px;
+}
+
+.Navbar_Buscador_BusAvan:hover{
+  background-color: rgb(227, 46, 118);
+  color: black;
 }
