--- a/Node/react_project/src/Estilos/DestPopu.css
+++ b/Node/react_project/src/Estilos/DestPopu.css
@@ -2,10 +2,25 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
 }
 
 .DestPopuContenedor img{
-  max-width: 40px;
-  max-height: 40px;
+  max-width: 30px;
+  max-height: 30px;
+}
+
+.DestPopuContenedor a{
+  color: black;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.DestPopuContenedor a:hover{
+  color: rgb(227, 46, 118);
+  text-decoration: underline;
+}
+
+.DestPopuContenedor p{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
 }
