--- a/Node/react_project/src/Estilos/InicioCuerpo.css
+++ b/Node/react_project/src/Estilos/InicioCuerpo.css
@@ -51,6 +51,10 @@
   justify-content: center;
 }
 
+.RowCentral{
+  width: -webkit-fill-available;
+}
+
 .CuerpoDerecha{
   display: flex;
   justify-content: center;
@@ -58,7 +62,7 @@
 }
 
 .CuerpoDerechaContenedor{
-  background-color: palevioletred;
+  background-color: rgb(152, 144, 148);
   border-radius: 25px;
   padding: 10px;
   width: -webkit-fill-available;
