--- a/Node/react_project/src/Estilos/Inicio.css
+++ b/Node/react_project/src/Estilos/Inicio.css
@@ -1,5 +1,4 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body{
+  overflow-x: hidden; /* Esto oculta el desplazamiento horizontal en el cuerpo */
 }
+
