Arreglo de bugs
Algunos bugs con imágenes y algunos atributos en login y registro fueron solucionados

--- a/Node/react_project/src/Estilos/Login.css
+++ b/Node/react_project/src/Estilos/Login.css
@@ -9,7 +9,7 @@
 .loginApp {
   margin: 0;
   padding: 0;
-  background-image: url('../Imagenes/Login_BG.jpg');
+  background-image: url('/public/Imagenes/Login_BG.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
