ReCreación de componentes
Navbar re creada para mejorar el funcionamiento y la responsividad, falta mejorar la barra de búsqueda, también se convirtió en componente al menú lateral izquierdo

--- a/Node/react_project/src/Estilos/InicioCuerpo.css
+++ b/Node/react_project/src/Estilos/InicioCuerpo.css
@@ -1,115 +1,7 @@
-button{
-  background-color: rgb(22, 55, 113);
-  border-radius: 35px;
-  padding: 5px 15px 5px 15px;
-  margin: 3px;
-  font-size: 20px;
-  color: white;
-  border: none;
-}
-
-button:hover{
-  background-color: rgb(227, 46, 118);
-  color: black;
-}
-
 .Cuerpo{
+  display: flex;
+  justify-content: space-between;
   background-color: whitesmoke;
   padding: 10px;
-}
-
-.CuerpoIzquierda{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.CuerpoIzquierdaBoton{
-  display: flex;
-  justify-content: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.CuerpoIzquierda ul{
-  list-style: none;
-  padding-left: 3px;
-}
-
-.CuerpoIzquerdaLinks{
-  color: black;
-  font-size: 30px;
-  text-decoration:underline;
-}
-
-.CuerpoIzquerdaLinks:hover{
-  color: rgb(227, 46, 118);
-}
-
-.CuerpoCentro{
-  border-left: solid #dbdbdb;
-  border-right: solid #dbdbdb;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: row;
-  text-align: center;
-  min-height: 55vh;
-}
-
-.CuerpoCentroBotones{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.CuerpoCentroPaginacionSola{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.RowCentral{
-  width: -webkit-fill-available;
-}
-
-.CuerpoDerecha{
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.CuerpoDerechaContenedor{
-  background-color: rgb(152, 144, 148);
-  border-radius: 25px;
-  padding: 10px;
-  width: -webkit-fill-available;
-}
-
-.CuerpoDerechaContenedor h1{
-  font-size: 30px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.PaginacionCol{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.Paginacion{
-  border-top: solid #a09e9e;
-  border-bottom: solid #a09e9e;
-}
-
-.PaginacionBotones{
-  border-radius: 80px;
-  padding: 10px;
-}
-
-.PaginacionBotonesCentro{
-  padding: 5px 7px;
-  border-radius: 60px;
+  min-height: 58vh;
 }
