--- a/Node/react_project/src/Estilos/Navibar.css
+++ b/Node/react_project/src/Estilos/Navibar.css
@@ -1,88 +1,24 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: monospace, 'Courier New', Courier;
-  font-size: 20px;
-}
-
-body{
-  margin: 0;
-}
-
-.Navbar {
+.Navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
   background: rgb(90, 173, 212);
   color: #fff;
   padding-bottom: 10px;
-  padding-top: 15px;
-}
-
-.MyContainerNavibar{
-  max-width: 100%;
-}
-
-.NavbarLogo{
-  display: flex;
-  justify-content: flex-start;
-}
-
-.NavbarBuscadorContenedor{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.Navbar_Buscador_Contenedor{
-  border-radius: 25px;
-  background-color: rgb(22, 55, 113);
-  width: max-content;
-  padding: 3px;
-  text-align-last: end;
-}
-
-.Navbar_Buscador_Contenedor:hover{
-  background-color: rgb(227, 46, 118);
-}
-
-.Navbar-Buscador{
-  width: 400px;
-  border-radius: 25px 0 0 25px;
-  border: none;
-}
-
-.Navbar_Buscador_Contenedor button{
-  background-color: rgba(255, 255, 255, 0);
-  border: none;
-  margin: 0%;
-}
-
-.Navbar_Buscador_Contenedor button:hover{
-  background-color: rgba(255, 11, 11, 0);
-}
-
-.Navbar_Buscador_Contenedor button:focus{
-  background-color: rgba(255, 255, 255, 0);
-}
-
-.Navbar_Buscador_Contenedor button:active{
-  background-color: rgba(255, 255, 255, 0) !important;
-}
-
-.Navbar_Buscador_BusAvan{
-  background-color: rgb(22, 55, 113);
-  border-radius: 25px;
-  color: white;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin: 6px;
-  width: fit-content;
-  height: 50px;
-  border: none;
+  padding-top: 10px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 25px;
+  width: 100%;
 }
 
-.Navbar_Buscador_BusAvan:hover{
-  background-color: rgb(227, 46, 118);
-  color: black;
+.NavbarCentro{
+  margin: 0 10px;
+}
+
+@media screen and (max-width: 500px) {
+  .Navbar{
+    display: flex;
+    justify-content: center;
+  }
 }
