--- a/Node/react_project/src/Estilos/NavibarUsuario.css
+++ b/Node/react_project/src/Estilos/NavibarUsuario.css
@@ -1,30 +1,56 @@
-.Contenedor {
+.DivUsu{
   display: flex;
+  align-items: center;
   justify-content: flex-end;
-  align-items: center;
-  justify-items: center;
+  min-width: 344px;
+  max-width: 345px;
 }
 
-.LinkUsuario{
-  display: flex;
-  align-items: center;
+.UsuLink{
+  color: #fff;
+  text-decoration: none;
 }
 
-.Nombre_Usuario{
+.UsuLink:hover{
+  color: rgb(227, 46, 118);
   text-decoration: underline;
-  font-size: 30px;
-  margin: 0;
-  padding: 0;
-  margin-right: 10px;
-  color: rgb(40, 40, 40);
 }
 
-.Imagen_Usuario{
-  min-width: 30px;
-  min-width: 30px;
+.UsuNom{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 30px;
+}
+
+.UsuImg{
+  min-width: 79px;
+  min-width: 79px;
   max-width: 80px;
   max-height: 80px;
-  width: auto;
-  height: auto;
-  border-radius: 40px;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+.IniReg{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(22, 55, 113);
+  border-radius: 30px;
+  padding: 5px 15px;
+  display: flex;
+  text-align: center;
+}
+
+.IniReg:hover{
+  background-color: rgb(227, 46, 118);
+}
+
+.IniRegLink{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+.IniRegLink:hover{
+  color: rgb(0, 0, 0);
+  text-decoration: underline;
 }
