--- a/Node/react_project/src/Estilos/PublicacionDisplay.css
+++ b/Node/react_project/src/Estilos/PublicacionDisplay.css
@@ -2,12 +2,15 @@
   border-radius: 25px;
   background-color: rgb(192, 188, 184);
   min-height: 300px;
-  margin: 5px;
+  margin: 10px;
+  border: solid rgb(117, 117, 117);
 }
 
 .PublicUsu{
-  max-width: 160px;
-  min-width: 160px;
+  width: 80%;
+  height: 80%;
+  border-radius: 100px;
+  margin: 10px;
 }
 
 .PublicCentro{
@@ -35,12 +38,16 @@
   align-items: center;
 }
 
-.NombreUsu{
+.NombreSeguir a{
   color: black;
   text-decoration: none;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 35px;
+  font-size: 50px;
   margin-right: 10px
+}
+
+.NombreSeguir button{
+  font-size: 25px;
 }
 
 .NombreUsu:hover{
@@ -69,8 +76,8 @@
 }
 
 .PublicTextoImg img{
-  max-width: 500px;
-  max-height: 500px;
   margin-top: 15px;
-  margin-bottom: 15px;  
+  margin-bottom: 15px;
+  width: 80%;
+  max-width: 100%;
 }
