--- a/Node/react_project/src/Estilos/CrearPublicacion.css
+++ b/Node/react_project/src/Estilos/CrearPublicacion.css
@@ -9,15 +9,73 @@
     min-height: 55vh;
 }
 
-.RecuadoPublicacion{
-  padding: 20px;
-  background-color:  rgb(90, 173, 212);
-  border-radius: 10px;
-  border: 20px ;
-  border-color: rgb(227, 46, 118);
-  width: 600px;
-  margin:auto;
-  margin-top: 5px;
+.container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+.box {
+  min-width: 600px; /* Ancho mínimo del recuadro */
+  height: 300px; /* Altura del recuadro */
+  background-color: rgb(254, 5, 124); /* Color de fondo del recuadro */
+  border-radius: 20px; /* Borde redondeado del recuadro */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra del recuadro */
+  display: flex;
+  min-height: 330px
+}
+.column {
+  min-width: 200px; /* Ancho mínimo de cada columna */
+  max-width: 500px;
+  min-height: 300px;
+  flex: 1;
+  background-color: rgb(90, 173, 212); /* Color de fondo de las columnas */
+  margin: 10px; /* Espacio entre las columnas */
+  border-radius: 10px; /* Borde redondeado de las columnas */
+  display: flex;
+  flex-direction: column; /* Elementos apilados verticalmente */
+}
+.input-container {
+  margin-bottom: 10px;
+  text-align: center; /* Centrar el texto */
+  display: flex;
+  flex-direction: column; /* Alinear los elementos verticalmente */
+  align-items: center; /* Centrar los elementos horizontalmente */
+}
+.input-container .input-label {
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 5px; /* Espacio entre el título y el input */
+}
+.input-container input.blue-border,
+.input-container select.blue-border {
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid rgb(139, 224, 236); /* Borde azul */
+  margin-top: 5px;
+}
+
+
+.image-container {
+  display: flex;
+  align-items: center; /* Centrar verticalmente */
+  justify-content: center; /* Centrar horizontalmente */
+  flex-grow: 1;
+  overflow: hidden; /* Evitar que la imagen se salga de la columna */
+}
+
+.image-container img {
+  max-width: 100%; /* Asegurarse de que la imagen no sea más grande que la columna */
+  max-height: 100%; /* Asegurarse de que la imagen no sea más grande que la columna */
+}
+
+
+.button-container {
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: flex-end; /* Alinear en la parte inferior */
+  flex-grow: 1; /* Permitir que el contenedor se expanda verticalmente */
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
