Cambios completos a la ventana de inicio
Se re crearon algunos componentes para mejorar las ventanas y evitar errores de clipeo de contenido al escalar la ventana

--- a/Node/react_project/src/Estilos/Footer.css
+++ b/Node/react_project/src/Estilos/Footer.css
@@ -4,6 +4,7 @@
   font-family: monospace, 'Courier New', Courier;
   padding: 20px;
   text-align: -webkit-center;
+  min-width: 400px;
 }
 
 .MyContainerFooter{
