--- a/Node/react_project/src/Estilos/Borradores.css
+++ b/Node/react_project/src/Estilos/Borradores.css
@@ -1,115 +1,83 @@
-button{
-    background-color: rgb(22, 55, 113);
-    border-radius: 35px;
-    padding: 5px 15px 5px 15px;
-    margin: 3px;
-    font-size: 20px;
-    color: white;
-    border: none;
-  }
-  
-  button:hover{
-    background-color: rgb(227, 46, 118);
-    color: hwb(0 0% 100%);
-  }
-  
-  .Cuerpo{
-    background-color: whitesmoke;
-    padding: 10px;
-  }
-  
-  .CuerpoIzquierda{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .CuerpoIzquierdaBoton{
-    display: flex;
-    justify-content: center;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-  
-  .CuerpoIzquierda ul{
-    list-style: none;
-    padding-left: 3px;
-  }
-  
-  .CuerpoIzquerdaLinks{
-    color: black;
-    font-size: 30px;
-    text-decoration:underline;
-  }
-  
-  .CuerpoIzquerdaLinks:hover{
-    color: rgb(227, 46, 118);
-  }
-  
-  .CuerpoCentro{
-    border-left: solid #dbdbdb;
-    border-right: solid #dbdbdb;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: row;
-    text-align: center;
-    min-height: 55vh;
-  }
-  
-  .CuerpoCentroBotones{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: center;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-  
-  .CuerpoCentroPaginacionSola{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .RowCentral{
-    width: -webkit-fill-available;
-  }
-  
-  .CuerpoDerecha{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  
-  .CuerpoDerechaContenedor{
-    background-color: rgb(152, 144, 148);
-    border-radius: 25px;
-    padding: 10px;
-    width: -webkit-fill-available;
-  }
-  
-  .CuerpoDerechaContenedor h1{
-    font-size: 30px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-  
-  .PaginacionCol{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .Paginacion{
-    border-top: solid #a09e9e;
-    border-bottom: solid #a09e9e;
-  }
-  
-  .PaginacionBotones{
-    border-radius: 80px;
-    padding: 10px;
-  }
-  
-  .PaginacionBotonesCentro{
-    padding: 5px 7px;
-    border-radius: 60px;
-  }
+.PublicContenedor{
+  border-radius: 25px;
+  background-color: rgb(192, 188, 184);
+  min-height: 300px;
+  margin: 10px;
+  border: solid rgb(117, 117, 117);
+}
+
+.PublicUsu{
+  width: 80%;
+  height: 80%;
+  border-radius: 100px;
+  margin: 10px;
+}
+
+.PublicCentro{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.PublicCentro p{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  margin-right: 15px;
+}
+
+.FechaRating{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.NombreSeguir{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.NombreSeguir a{
+  color: black;
+  text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 50px;
+  margin-right: 10px
+}
+
+.NombreSeguir button{
+  font-size: 25px;
+}
+
+.NombreUsu:hover{
+  text-decoration: underline;
+  color: rgb(227, 46, 118);
+}
+
+.PublicDerecha{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.PublicBan{
+  max-width: 80px;
+  margin: 10px;
+}
+
+.PublicTextoImg p{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 0px;
+  text-align: start;
+}
+
+.PublicTextoImg img{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 80%;
+  max-width: 100%;
+}
