--- a/Node/react_project/src/Estilos/InicioCuerpo.css
+++ b/Node/react_project/src/Estilos/InicioCuerpo.css
@@ -1,7 +1,73 @@
 .Cuerpo{
-  display: flex;
-  justify-content: space-between;
   background-color: whitesmoke;
   padding: 10px;
   min-height: 58vh;
+}
+
+.Izquierdo{
+  min-width: 400px;
+  border-right: solid #dbdbdb;
+}
+
+.Centro{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 10px;
+  min-width: 800px;
+  min-height: 50vh;
+}
+
+.Centro button{
+  font-size: 25px;
+}
+
+.CentroBot{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.PaginacionCol{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Paginacion{
+  border-top: solid #a09e9e;
+  border-bottom: solid #a09e9e;
+}
+
+.Derecho{
+  border-left: solid #dbdbdb;
+}
+
+.DestiPopus{
+  background-color: rgb(182, 157, 170);
+  border-radius: 20px;
+  padding: 15px;
+  min-height: 300px;
+  max-width: 550px;
+  min-width: 400px;
+}
+
+.DestiPopus h1{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 35px;
+}
+
+.Paises{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+@media screen and (max-width: 600px) {
+  .Centro{
+    min-width: 400px;
+    max-width: 800px;
+  }
 }
