--- a/Node/react_project/src/Estilos/PublicacionDisplay.css
+++ b/Node/react_project/src/Estilos/PublicacionDisplay.css
@@ -1,61 +1,56 @@
 .PublicContenedor{
-  border-radius: 25px;
   background-color: rgb(192, 188, 184);
-  min-height: 300px;
+  border-radius: 25px;
   margin: 10px;
-  border: solid rgb(117, 117, 117);
+  min-height: 200px;
+  padding: 20px;
+  min-width: 410px;
 }
 
-.PublicUsu{
-  width: 80%;
-  height: 80%;
-  border-radius: 100px;
-  margin: 10px;
-}
-
-.PublicCentro{
+.UsuInfo{
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.PublicCentro p{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 25px;
-  margin-right: 15px;
+.UsuInfo p{
+  font-size: 30px;
+  margin: 0;
+  padding-right: 10px;
+}
+
+.ImgUsu{
+  max-width: 150px;
+  min-width: 150px;
+  max-height: 150px;
+  min-height: 150px;
+  border-radius: 50%;
+  border: solid rgb(49, 49, 49);
+}
+
+.DivCentro{
+  align-self: center;
+}
+
+.LinkUsuName{
+  font-size: 40px;
+  padding-right: 5px;
+}
+
+.NomBot{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .FechaRating{
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-}
-
-.NombreSeguir{
-  display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
-.NombreSeguir a{
-  color: black;
-  text-decoration: none;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 50px;
-  margin-right: 10px
-}
-
-.NombreSeguir button{
-  font-size: 25px;
-}
-
-.NombreUsu:hover{
-  text-decoration: underline;
-  color: rgb(227, 46, 118);
-}
-
-.PublicDerecha{
+.PaisReacc{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -63,21 +58,37 @@
 
 .PublicBan{
   max-width: 80px;
-  margin: 10px;
+  min-width: 80px;
+  max-height: 80px;
+  min-height: 80px;
+  border-radius: 50%;
 }
 
-.PublicTextoImg p{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 25px;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-bottom: 0px;
-  text-align: start;
+.PublicContenido{
+  padding: 25px;
+  font-size: 20px;
 }
 
-.PublicTextoImg img{
-  margin-top: 15px;
-  margin-bottom: 15px;
-  width: 80%;
-  max-width: 100%;
+.divImagen{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.PublicImagen{
+  max-width: 40vw;
+  max-height: 400px;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .FechaRating, .NomBot{
+    flex-direction: column;
+  }
+  .PaisReacc{
+    flex-direction: row;
+  }
+  .PublicImagen{
+    max-width: 380px;
+  }
 }
