--- a/Node/react_project/src/Estilos/CrearPublicacion.css
+++ b/Node/react_project/src/Estilos/CrearPublicacion.css
@@ -9,21 +9,33 @@
     min-height: 55vh;
 }
 
-.container {
+.contenedor {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-.box {
-  min-width: 600px; 
-  height: 300px; 
+
+.recuadro {
+  min-width: 740px; 
+  height: 440px; 
   background-color: rgb(254, 5, 124); 
   border-radius: 20px; 
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
   display: flex;
   min-height: 330px
 }
+
+.recuadro-pequeno {
+  margin-top: 20px;
+  margin-left: 20px;
+  width: 700px; 
+  height: 400px; 
+  background-color: rgb(90, 173, 212);  
+  border-radius: 15px; 
+  display: flex; 
+}
+
 .column {
   min-width: 200px; 
   max-width: 500px;
@@ -79,3 +91,10 @@
   margin-bottom: 10px;
 }
 
+.fotoinput{
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid rgb(139, 224, 236); 
+  margin-top: 5px;
+  width: 80%;
+}
