--- a/Node/react_project/src/Estilos/CrearPublicacion.css
+++ b/Node/react_project/src/Estilos/CrearPublicacion.css
@@ -2,6 +2,8 @@
 
 .ROW {
   margin-top: 20px;
+  margin-right:300px;
+  margin-bottom: 40px;
   margin-left: 20px;
   width: 700px; 
   height: 400px; 
@@ -24,6 +26,12 @@
   display: flex;
   flex-direction: column; 
 }
+
+.Izquierdo{
+  min-width: 400px;
+  border-right: solid #dbdbdb;
+}
+
 .input-container {
   margin-bottom: 10px;
   text-align: center; 
@@ -68,4 +76,19 @@
   border: 2px solid rgb(139, 224, 236); 
   margin-top: 5px;
   width: 80%;
+}
+
+.btn{
+  background-color: rgb(22, 55, 113);
+  border-radius: 35px;
+  padding: 5px 15px 5px 15px;
+  margin: 3px;
+  font-size: 30px;
+  color: white;
+  border: none;
+}
+
+.btn:hover{
+  background-color: rgb(227, 46, 118);
+  color: hwb(0 0% 100%);
 }
