--- a/Node/react_project/src/Estilos/PerfilCuerpo.css
+++ b/Node/react_project/src/Estilos/PerfilCuerpo.css
@@ -1,31 +1,35 @@
-.CuerpoCentro{
-    border-left: solid #dbdbdb;
-    border-right: solid #dbdbdb;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: row;
-    text-align: center;
-    min-height: 55vh;
+
+
+.ROW {
+  margin-top: 20px;
+  margin-right:300px;
+  margin-bottom: 40px;
+  margin-left: 20px;
+  width: 700px; 
+  height: 400px; 
+  background-color: rgb(90, 173, 212);  
+  border: 20px;
+  border-radius: 15px; 
+  display: flex; 
+  border-color:rgb(254, 5, 124);
+  border-style: solid;
 }
 
-.RecuadoPerfil{
-  padding: 20px;
-  background-color:  rgb(90, 173, 212);
-  border-radius: 10px;
-  border: 20px ;
-  border-color: rgb(227, 46, 118);
-  width: 600px;
-  margin:auto;
-  margin-top: 5px;
+.COL {
+  min-width: 200px; 
+  max-width: 500px;
+  min-height: 300px;
+  flex: 1;
+  background-color: rgb(90, 173, 212); 
+  margin: 10px; 
+  border-radius: 10px; 
   display: flex;
-  justify-content: space-between;
+  flex-direction: column; 
 }
 
-.columna{
-  flex: 1px;
-  margin-left: 10px;
-  margin-right: 10px;
+.Izquierdo{
+  min-width: 400px;
+  border-right: solid #dbdbdb;
 }
 
 .InputContainer{
@@ -54,4 +58,19 @@
   width: 100%;
   max-height: 150px;
   border-radius: 5px;
+}
+
+.btn{
+  background-color: rgb(22, 55, 113);
+  border-radius: 35px;
+  padding: 5px 15px 5px 15px;
+  margin: 3px;
+  font-size: 30px;
+  color: white;
+  border: none;
+}
+
+.btn:hover{
+  background-color: rgb(227, 46, 118);
+  color: hwb(0 0% 100%);
 }
