--- a/Node/react_project/src/Estilos/MenuIzquierdo.css
+++ b/Node/react_project/src/Estilos/MenuIzquierdo.css
@@ -3,7 +3,7 @@ button{
   border-radius: 35px;
   padding: 5px 15px 5px 15px;
   margin: 3px;
-  font-size: 35px;
+  font-size: 45px;
   color: white;
   border: none;
 }
@@ -24,9 +24,9 @@ button:hover{
   display: flex;
   align-items: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 30px;
+  font-size: 40px;
   margin: 5px;
-  color: black;
+  color: rgb(75, 75, 75);
   text-decoration: none;
 }
 
@@ -37,4 +37,9 @@ button:hover{
 
 .MenuLinks p{
   margin: 0%;
+}
+
+.PaginaActual{
+  font-weight: bold;
+  color: black;
 }
