--- a/Node/react_project/src/Estilos/FiltroDerecho.css
+++ b/Node/react_project/src/Estilos/FiltroDerecho.css
@@ -1,25 +1,20 @@
-.PerfilCuerpo{
-  background-color: whitesmoke;
-  padding: 10px;
-  min-height: 58vh;
-}
-
-.PerfilROW {
-  margin: 20px;
-  width: 700px;
-  background-color: rgb(90, 173, 212);
-  border: 10px;
-  border-radius: 15px; 
+.Filtros{
+  background-color: rgb(187, 206, 225);
+  border-radius: 20px;
+  padding: 15px;
+  min-height: 200px;
+  max-width: 400px;
+  min-width: 350px;
   display: flex;
-  border-color:rgb(254, 5, 124);
-  border-style: solid;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
-.PerfilROW h1{
+.Filtros h1{
   margin-bottom: 20px;
 }
 
-.PerfilROW input{
+.Filtros input{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 20px;
   border-radius: 25px;
@@ -27,16 +22,15 @@
   background-color: rgb(241, 240, 255);
   text-indent: 5px;
   height: 35px;
-  width: 200px;
 }
 
-.PerfilROW input:hover{
+.Filtros input:hover{
   border-color: rgb(0, 0, 0);
   background-color: rgb(255, 19, 153);
   color: white;
 }
 
-.PerfilROW Select{
+.Filtros Select{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 20px;
   border-radius: 25px;
@@ -44,58 +38,43 @@
   background-color: rgb(241, 240, 255);
   text-indent: 5px;
   height: 30px;
-  width: 90%;
 }
 
-.PerfilROW Select:hover{
+.Filtros Select:hover{
   border-color: rgb(0, 0, 0);
   background-color: rgb(255, 19, 153);
   color: white;
 }
 
-.PerfilROW button{
+.Filtros button{
   font-size: 25px;
 }
 
-.PerfilROW h1{
+.Filtros h1{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 35px;
 }
 
-.PerfilROW p{
+.Filtros p{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  font-size: 28px;
   margin: 0px;
   padding-right: 5px;
 }
 
-.PerfilCOL {
-  min-width: 200px; 
-  max-width: 500px;
-  min-height: 300px;
-  flex: 1;
-  background-color: rgb(90, 173, 212); 
-  margin: 10px; 
-  border-radius: 10px; 
+.FiltrosDiv{
   display: flex;
-  flex-direction: column; 
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.Izquierdo{
-  min-width: 400px;
-  border-right: solid #dbdbdb;
-}
-
-.InputFoto{
-  width: 200px;
-}
-
-.foto{
-  text-align: center;
-}
-
-.FotoPerfil{
-  width: 100%;
-  max-height: 200px;
-  border-radius: 5px;
+.FiltrosDivBotones{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
 }
