--- a/Node/react_project/src/Estilos/Buscador.css
+++ b/Node/react_project/src/Estilos/Buscador.css
@@ -1,49 +1,43 @@
-.NavbarBuscadorContenedor{
+.BuscadorContenedor{
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  font-size: 20px;
+  flex-wrap: wrap;
 }
   
-.Navbar_Buscador_Contenedor{
-  border-radius: 25px;
+.Barra{
+  display: flex;
+  align-items: center;
   background-color: rgb(22, 55, 113);
-  width: max-content;
-  padding: 3px;
-  text-align-last: end;
+  padding: 1px 5px 1px 5px;
+  border-radius: 25px;
 }
   
-.Navbar_Buscador_Contenedor:hover{
+.Barra:hover{
   background-color: rgb(227, 46, 118);
 }
   
-.Navbar-Buscador{
-  width: 30vw;
-  border-radius: 25px 0 0 25px;
-  border: none;
+.BarraBuscador{
+  border-radius: 0 25px 25px 0;
 }
 
-@media screen and (max-width: 1012px){
-  .Navbar-Buscador{
-    width: 320px;
-  }
-}
+
   
-.Navbar_Buscador_Contenedor button{
+.Barra button{
   background-color: rgba(255, 255, 255, 0);
   border: none;
   margin: 0%;
 }
   
-.Navbar_Buscador_Contenedor button:hover{
+.Barra button:hover{
   background-color: rgba(255, 11, 11, 0);
 }
   
-.Navbar_Buscador_Contenedor button:focus{
+.Barra button:focus{
   background-color: rgba(255, 255, 255, 0);
 }
   
-.Navbar_Buscador_Contenedor button:active{
+.Barra button:active{
   background-color: rgba(255, 255, 255, 0) !important;
 }
   
@@ -51,14 +45,7 @@
   background-color: rgb(22, 55, 113);
   border-radius: 25px;
   color: white;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin: 6px;
-  width: fit-content;
-  height: 50px;
-  border: none;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 25px;
 }
   
 .Navbar_Buscador_BusAvan:hover{
