--- a/Node/react_project/src/Estilos/CrearPublicacion.css
+++ b/Node/react_project/src/Estilos/CrearPublicacion.css
@@ -24,12 +24,12 @@
   display: flex;
   flex-direction: column; 
 }
-
+/*
 .Izquierdo{
   min-width: 400px;
   border-right: solid #dbdbdb;
 }
-
+*/
 .input-container {
   margin-bottom: 10px;
   text-align: center; 
@@ -76,7 +76,7 @@
   width: 80%;
 }
 
-.btn{
+.Mibtn{
   background-color: rgb(22, 55, 113);
   border-radius: 35px;
   padding: 5px 15px 5px 15px;
@@ -86,7 +86,7 @@
   border: none;
 }
 
-.btn:hover{
+.Mibtn:hover{
   background-color: rgb(227, 46, 118);
   color: hwb(0 0% 100%);
 }
