--- a/Node/react_project/src/Estilos/DestPopu.css
+++ b/Node/react_project/src/Estilos/DestPopu.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  margin: 5px;
 }
 
 .DestPopuContenedor img{
@@ -12,5 +13,6 @@
 .DestPopuContenedor p{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 1.5em;
+  margin: 0%;
 }
