--- a/Node/react_project/src/Estilos/InicioCuerpo.css
+++ b/Node/react_project/src/Estilos/InicioCuerpo.css
@@ -2,59 +2,51 @@
   background-color: whitesmoke;
   padding: 10px;
   min-height: 58vh;
+
 }
 
-.Izquierdo{
-  width: 500px;
-  border-right: solid #dbdbdb;
-}
-
-.Centro{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 10px;
-  min-width: 800px;
-  min-height: 50vh;
-}
-
-.Centro button{
-  font-size: 25px;
-}
-
-.CentroBot{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-}
-
-.PaginacionCol{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.bodycanvas{
+  background-color: whitesmoke;
 }
 
 .Paginacion{
   border-top: solid #a09e9e;
   border-bottom: solid #a09e9e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
 }
 
-.Derecho{
-  border-left: solid #dbdbdb;
+.Siguiendo{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.RowCentro{
+  padding: 5px;
+  display: flex;
+}
+
+.ColPublic{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
 .DestiPopus{
   background-color: rgb(182, 157, 170);
   border-radius: 20px;
   padding: 15px;
-  min-height: 300px;
-  max-width: 550px;
-  min-width: 400px;
 }
 
 .DestiPopus h1{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 35px;
+  font-size: 30px;
 }
 
 .Paises{
@@ -63,11 +55,4 @@
   flex-direction: column;
   justify-content: center;
   flex-wrap: nowrap;
-}
-
-@media screen and (max-width: 1320px) {
-  .Centro{
-    min-width: 400px;
-    max-width: 800px;
-  }
 }
