--- a/Node/react_project/src/Estilos/MenuIzquierdo.css
+++ b/Node/react_project/src/Estilos/MenuIzquierdo.css
@@ -1,9 +1,13 @@
+.CuerpoMenu{
+  font-size: 23px;
+}
+
 button{
   background-color: rgb(22, 55, 113);
   border-radius: 35px;
   padding: 5px 15px 5px 15px;
   margin: 3px;
-  font-size: 45px;
+  font-size: 1em;
   color: white;
   border: none;
 }
@@ -24,7 +28,7 @@ button:hover{
   display: flex;
   align-items: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 40px;
+  font-size: 1em;
   margin: 5px;
   color: rgb(75, 75, 75);
   text-decoration: none;
@@ -42,4 +46,10 @@ button:hover{
 .PaginaActual{
   font-weight: bold;
   color: black;
+}
+
+@media screen and (max-width: 768px){
+  .CuerpoMenu{
+    font-size: 15px;
+  }
 }
