--- a/Node/react_project/src/Estilos/Navibar.css
+++ b/Node/react_project/src/Estilos/Navibar.css
@@ -1,30 +1,39 @@
-.Navbar{
+.Navibar{
+  background-color: rgb(90, 173, 212);
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  flex-direction: row;
+  padding: 18px;
   flex-wrap: wrap;
-  background: rgb(90, 173, 212);
-  color: #fff;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  width: 100%;
-  padding: 10px;
+}
+  
+.logoBoton {
+  width: 5vw;
+  height: auto;
+  margin: 0px;
 }
 
-@media screen and (max-width: 500px) {
-  .NavbarBuscadorContenedor, .Navbar{
-    display: flex;
-    justify-content: flex-end;
-  }
+.LogoNavibar{
+  margin: 0;
+  color: black;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  display: contents;
+}
 
-  .NavbarIzquierda{
-    width: 20%;
+.LogoNavibar h1{
+  margin-bottom: 0%;
+  font-size: 2vw;
+}
+
+@media screen and (max-width: 768px) {
+  .LogoNavibar h1{
+    font-size: 15px;
   }
-  .NavbarCentro{
-    width: 80%;
-  }
-  .NavbarDerecha{
-    width: 100%;
-    padding-left: 100px;
+  .logoBoton{
+    max-width: 38px;
+    min-width: 38px;
+    max-height: 38px;
+    min-height: 38px;
   }
 }
