--- a/Node/react_project/src/Estilos/NavibarUsuario.css
+++ b/Node/react_project/src/Estilos/NavibarUsuario.css
@@ -2,8 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  min-width: 344px;
-  max-width: 345px;
 }
 
 .UsuLink{
@@ -18,21 +16,20 @@
 
 .UsuNom{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 30px;
+  font-size: 2em;
+  margin-bottom: 0px;
 }
 
 .UsuImg{
-  min-width: 79px;
-  min-width: 79px;
-  max-width: 80px;
-  max-height: 80px;
+  width: 5vw;
+  height: 5vw;
   border-radius: 50%;
   margin-left: 5px;
 }
 
 .IniReg{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 30px;
+  font-size: 2vw;
   color: rgb(255, 255, 255);
   background-color: rgb(22, 55, 113);
   border-radius: 30px;
@@ -53,4 +50,21 @@
 .IniRegLink:hover{
   color: rgb(0, 0, 0);
   text-decoration: underline;
+}
+
+@media screen and (max-width: 768px) {
+  .IniReg{
+    font-size: 15px;
+  }
+
+  .UsuNom{
+    font-size: 15px;
+  }
+
+  .UsuImg{
+    max-width: 38px;
+    min-width: 38px;
+    max-height: 38px;
+    min-height: 38px;
+  }
 }
