--- a/Node/react_project/src/Estilos/PerfilAjeno.css
+++ b/Node/react_project/src/Estilos/PerfilAjeno.css
@@ -24,11 +24,14 @@
   display: flex;
   flex-direction: column; 
 }
-  
+
+/*
 .Izquierdo{
   min-width: 400px;
   border-right: solid #dbdbdb;
 }
+*/
+
 .Subtitulo{
   margin-top: 50px;
   text-align: center;
@@ -43,6 +46,7 @@
   text-align: center;
   font-weight: bold;
 }
+
 .image-container {
   display: flex;
   align-items: center; 
@@ -62,8 +66,7 @@
   width: 80%;
 }
 
-.btn{
-  
+.Mibtn{
   background-color: rgb(22, 55, 113);
   border-radius: 35px;
   padding: 5px 15px 5px 15px;
@@ -73,7 +76,7 @@
   border: none;
 }
 
-.btn:hover{
+.Mibtn:hover{
   background-color: rgb(227, 46, 118);
   color: hwb(0 0% 100%);
 }
