--- a/Node/react_project/src/Estilos/PerfilCuerpo.css
+++ b/Node/react_project/src/Estilos/PerfilCuerpo.css
@@ -80,11 +80,12 @@
   display: flex;
   flex-direction: column; 
 }
-
+/*
 .Izquierdo{
   min-width: 400px;
   border-right: solid #dbdbdb;
 }
+*/
 
 .InputFoto{
   width: 200px;
