--- a/Node/react_project/src/Estilos/CrearPublicacion.css
+++ b/Node/react_project/src/Estilos/CrearPublicacion.css
@@ -1,92 +1,72 @@
-.CrearPublicacion{
-  min-height: 600px;
+.CreaPublicCuerpo{
+  padding: 20px;
+  background: rgb(90, 173, 212);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+  border-radius: 40px;
+  border: 6px solid rgb(254, 5, 124);
+  text-align: center;
 }
 
-.ROW {
-  width: 700px; 
-  height: 400px; 
-  background-color: rgb(90, 173, 212);
-  border: 20px;
-  border-radius: 15px; 
-  display: flex; 
-  border-color:rgb(254, 5, 124);
-  border-style: solid;
-}
-
-.COL {
-  min-width: 200px; 
-  max-width: 500px;
-  min-height: 300px;
-  flex: 1;
-  background-color: rgb(90, 173, 212); 
-  margin: 10px; 
-  border-radius: 10px; 
+.CrearPublictTitulo{
   display: flex;
-  flex-direction: column; 
-}
-/*
-.Izquierdo{
-  min-width: 400px;
-  border-right: solid #dbdbdb;
-}
-*/
-.input-container {
-  margin-bottom: 10px;
-  text-align: center; 
-  display: flex;
-  flex-direction: column; 
-  align-items: center; 
-}
-.input-container .input-label {
-  font-weight: bold;
-  margin-top: 10px;
-  margin-bottom: 5px; 
-}
-.input-container input.blue-border,
-.input-container select.blue-border {
-  padding: 5px;
-  border-radius: 5px;
-  border: 2px solid rgb(139, 224, 236); 
-  margin-top: 5px;
-}
-.image-container {
-  display: flex;
-  align-items: center; 
-  justify-content: center; 
-  flex-grow: 1;
-  overflow: hidden; 
-}
-.image-container img {
-  max-width: 100%; 
-  max-height: 100%; 
-}
-.button-container {
-  display: flex;
-  justify-content: center; 
-  align-items: flex-end; 
-  flex-grow: 1; 
-  margin-top: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
   margin-bottom: 10px;
 }
-.fotoinput{
-  padding: 5px;
-  border-radius: 5px;
-  border: 2px solid rgb(139, 224, 236); 
-  margin-top: 5px;
-  width: 80%;
+
+.CrearPublicDesc{
+  margin-bottom: 10px;
 }
 
-.Mibtn{
-  background-color: rgb(22, 55, 113);
-  border-radius: 35px;
-  padding: 5px 15px 5px 15px;
-  margin: 3px;
-  font-size: 30px;
+
+.CrearPublicBotones{
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.CreaPublicCuerpo h1{
+  margin-bottom: 20px;
+}
+
+.CreaPublicCuerpo input{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  border-radius: 25px;
+  border-color: rgb(22, 55, 113);
+  background-color: rgb(241, 240, 255);
+  text-indent: 5px;
+  height: 35px;
+  margin-left: 10px;
+  width: 100%;
+}
+
+.CreaPublicCuerpo input:hover{
+  border-color: rgb(0, 0, 0);
+  background-color: rgb(255, 19, 153);
   color: white;
-  border: none;
 }
 
-.Mibtn:hover{
-  background-color: rgb(227, 46, 118);
-  color: hwb(0 0% 100%);
+.CreaPublicCuerpo Select{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  border-radius: 25px;
+  border-color: rgb(22, 55, 113);
+  background-color: rgb(241, 240, 255);
+  text-indent: 5px;
+  height: 35px;
+  margin-left: 10px;
+}
+
+.CreaPublicCuerpo Select:hover{
+  border-color: rgb(0, 0, 0);
+  background-color: rgb(255, 19, 153);
+  color: white;
+}
+
+.CreaPublicCuerpo label{
+  font-size: 1.5em;
 }
