--- a/Node/react_project/src/Estilos/InicioCuerpo.css
+++ b/Node/react_project/src/Estilos/InicioCuerpo.css
@@ -2,11 +2,10 @@
   background-color: whitesmoke;
   padding: 10px;
   min-height: 58vh;
-
 }
 
 .bodycanvas{
-  background-color: whitesmoke;
+  background-color: rgb(215, 215, 215);
 }
 
 .Paginacion{
