Entrega Final Ultimo Commit
Pasando la documentación y un pequeño cambio en editar perfil, así como países sin verificación de token.

--- a/Node/react_project/src/Estilos/InicioCuerpo.css
+++ b/Node/react_project/src/Estilos/InicioCuerpo.css
@@ -30,11 +30,19 @@
   display: flex;
 }
 
+.boton-seleccionado{
+  background-color: rgb(255, 19, 153);
+}
+
 .ColPublic{
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
+}
+
+.active-page{
+  background-color: rgb(255, 19, 153);
 }
 
 .DestiPopus{
